--- a/FTDIDeviceControl/FTDIDeviceControl.vcxproj.filters
+++ b/FTDIDeviceControl/FTDIDeviceControl.vcxproj.filters
@@ -69,5 +69,14 @@
     <ClInclude Include="ftd2xx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="FTDIDeviceControl.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon1.ico" />
   </ItemGroup>
 </Project>
