--- a/FTDIDeviceControl/FTDIDeviceControl.vcxproj.filters
+++ b/FTDIDeviceControl/FTDIDeviceControl.vcxproj.filters
@@ -62,6 +62,15 @@
     <ClCompile Include="GeneratedFiles\Release\moc_WaitingThread.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_Journal.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_Journal.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="Journal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ftdidevicecontrol.h">
@@ -74,6 +83,9 @@
       <Filter>Resource Files</Filter>
     </CustomBuild>
     <CustomBuild Include="WaitingThread.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="Journal.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
